--- a/insert.ipynb
+++ b/insert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,21 +10,21 @@
      "output_type": "stream",
      "text": [
       "Connected!\n",
-      "Enter litigator's name: ju\n",
-      "Enter litigator's contact: 2323232323\n",
-      "Enter litigator's address: noqlj\n",
+      "Enter litigator's name: Karthik\n",
+      "Enter litigator's contact: 5645564556\n",
+      "Enter litigator's address: 12,10th cross,Srinagar,Bangalore\n",
       "Enter litigator's gender(M/F): M\n",
       "Enter litigator's age: 34\n",
-      "Enter incident place: bfwl\n",
-      "Enter incident date: 12-03-2018\n",
-      "Enter incident time: 3:45\n",
-      "Enter the details about the crime: fkwjjb\n",
-      "Enter the place where the complaint is logged: lkfn\n",
+      "Enter incident place: Srinagar\n",
+      "Enter incident date: 12-12-2019\n",
+      "Enter incident time: 12:00\n",
+      "Enter the details about the crime: robbery\n",
+      "Enter the place where the complaint is logged: Srinagar\n",
       "\n",
       "\n",
-      "A case is registered with ID (19,) ,for the FIR: (2384,)\n",
-      "The victim ID: (1585,)\n",
-      "The accused ID: (10034,)\n",
+      "A case is registered with ID (20,) ,for the FIR: (2385,)\n",
+      "The victim ID: (1586,)\n",
+      "The accused ID: (10035,)\n",
       "The officer alloted : ('OF9876',)\n"
      ]
     }
