--- a/insert.ipynb
+++ b/insert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,21 +11,21 @@
      "text": [
       "Connected!\n",
       "Enter litigator's name: Karthik\n",
-      "Enter litigator's contact: 5645564556\n",
+      "Enter litigator's contact: 2736451837\n",
       "Enter litigator's address: 12,10th cross,Srinagar,Bangalore\n",
       "Enter litigator's gender(M/F): M\n",
       "Enter litigator's age: 34\n",
       "Enter incident place: Srinagar\n",
-      "Enter incident date: 12-12-2019\n",
-      "Enter incident time: 12:00\n",
-      "Enter the details about the crime: robbery\n",
+      "Enter incident date: 12-09-2018\n",
+      "Enter incident time: 12:45\n",
+      "Enter the details about the crime: MURDER\n",
       "Enter the place where the complaint is logged: Srinagar\n",
       "\n",
       "\n",
-      "A case is registered with ID (20,) ,for the FIR: (2385,)\n",
-      "The victim ID: (1586,)\n",
-      "The accused ID: (10035,)\n",
-      "The officer alloted : ('OF9876',)\n"
+      "A case is registered with ID (21,) ,for the FIR: (2386,)\n",
+      "The victim ID: (1587,)\n",
+      "The accused ID: (10036,)\n",
+      "The officer alloted : ('OF8912',)\n"
      ]
     }
    ],
