--- a/insert.ipynb
+++ b/insert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,22 +10,22 @@
      "output_type": "stream",
      "text": [
       "Connected!\n",
-      "Enter litigator's name: Karthik\n",
-      "Enter litigator's contact: 2736451837\n",
-      "Enter litigator's address: 12,10th cross,Srinagar,Bangalore\n",
+      "Enter litigator's name: cena\n",
+      "Enter litigator's contact: 0000000000\n",
+      "Enter litigator's address: 1,34,cnagar,africa,bangalore\n",
       "Enter litigator's gender(M/F): M\n",
-      "Enter litigator's age: 34\n",
-      "Enter incident place: Srinagar\n",
-      "Enter incident date: 12-09-2018\n",
-      "Enter incident time: 12:45\n",
-      "Enter the details about the crime: MURDER\n",
-      "Enter the place where the complaint is logged: Srinagar\n",
+      "Enter litigator's age: 56\n",
+      "Enter incident place: bangalore\n",
+      "Enter incident date: 12-12-2017\n",
+      "Enter incident time: 12:59\n",
+      "Enter the details about the crime: murder\n",
+      "Enter the place where the complaint is logged: bangalore\n",
       "\n",
       "\n",
-      "A case is registered with ID (21,) ,for the FIR: (2386,)\n",
-      "The victim ID: (1587,)\n",
-      "The accused ID: (10036,)\n",
-      "The officer alloted : ('OF8912',)\n"
+      "A case is registered with ID (26,) ,for the FIR: (2391,)\n",
+      "The victim ID: (1592,)\n",
+      "The accused ID: (10041,)\n",
+      "The officer alloted : ('OF2389',)\n"
      ]
     }
    ],
